--- a/config/config.json
+++ b/config/config.json
@@ -1,24 +1,26 @@
 {
   "development": {
     "username": "postgres",
-    "password": "postgres",
-    "database": "todo_l6",
+    "password": "Drvl@123",
+    "database": "wd-todo-db",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "postgres",
-    "database": "todo_l6_test",
+    "password": "Drvl@123",
+    "database": "wd-todo-test-db",
     "host": "127.0.0.1",
-    "dialect": "postgres",
-    "logging": false
+    "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "use_env_variable": "DATABASE_URL",
+    "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": {
+        "require": true ,
+        "rejectUnauthorized": false
+      }
+    }
   }
 }
